--- a/app/src/main/res/layout/custon_timeline_listview.xml
+++ b/app/src/main/res/layout/custon_timeline_listview.xml
@@ -12,7 +12,7 @@
         android:padding="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="2dp"
+        card_view:cardCornerRadius="3dp"
         card_view:cardElevation="3dp"
         card_view:cardPreventCornerOverlap="false"
         card_view:cardUseCompatPadding="true"
@@ -24,7 +24,16 @@
             >
 
 
-
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:padding="12dp"
+                android:id="@+id/timeline_favourite_icon"
+                android:src="@drawable/ic_favorite_border_black_24dp"
+                android:background="#f9f9f9"
+                />
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,12 +55,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
+                        android:textSize="12sp"
                         android:layout_alignParentBottom="true"
                         android:id="@+id/timeline_lv_created_at_time_tv"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
+                        android:paddingLeft="10dp"
                         android:layout_toEndOf="@+id/timeline_lv_created_at_time_tv"
                         android:id="@+id/timeline_lv_source_tv"/>
                     <TextView
