--- a/app/src/main/res/layout/custon_timeline_listview.xml
+++ b/app/src/main/res/layout/custon_timeline_listview.xml
@@ -12,7 +12,7 @@
         android:padding="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="3dp"
+        card_view:cardCornerRadius="4dp"
         card_view:cardElevation="3dp"
         card_view:cardPreventCornerOverlap="false"
         card_view:cardUseCompatPadding="true"
@@ -42,6 +42,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:src="@mipmap/ic_launcher"
                     android:id="@+id/timeline_lv_profile_pic"/>
@@ -62,6 +63,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
+                        android:textSize="12sp"
                         android:paddingLeft="10dp"
                         android:layout_toEndOf="@+id/timeline_lv_created_at_time_tv"
                         android:id="@+id/timeline_lv_source_tv"/>
@@ -81,9 +83,23 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+                    android:padding="12dp"
                     android:layout_below="@+id/timeline_lv_profile_pic"
                     android:id="@+id/timeline_text"/>
+
+                <project.weixin.com.weibo.MyGridView
+                    android:padding="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:numColumns="3"
+                    android:stretchMode="none"
+                    android:columnWidth="50dp"
+                    android:verticalSpacing="10dp"
+                    android:layout_below="@+id/timeline_text"
+                    android:fastScrollEnabled="false"
+                    android:id="@+id/timeline_gridview">
+
+                </project.weixin.com.weibo.MyGridView>
             </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
