--- a/app/src/main/res/layout/repost_activity.xml
+++ b/app/src/main/res/layout/repost_activity.xml
@@ -4,6 +4,29 @@
     android:layout_height="match_parent">
 
 
+
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view_repost_title"
+        android:padding="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        card_view:cardElevation="1dp"
+        card_view:cardPreventCornerOverlap="false"
+        card_view:cardUseCompatPadding="true"
+        >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Repost"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        android:gravity="center"/>
+    </android.support.v7.widget.CardView>
+
+
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
@@ -14,6 +37,7 @@
         card_view:cardElevation="3dp"
         card_view:cardPreventCornerOverlap="false"
         card_view:cardUseCompatPadding="true"
+        android:layout_below="@+id/card_view_repost_title"
         >
 
         <RelativeLayout
@@ -23,25 +47,11 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="260dp"
+                android:gravity="start"
                 />
 
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true">
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.33"
-                    android:text="cancle"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.33"
-                    android:text="send"/>
-            </LinearLayout>
 
         </RelativeLayout>
 
